--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
     font-family: 'Poppins', sans-serif;
 }
     </style>
+
+<div id="marque">
+    
+</div>   
+
     <div class="container">
         <div class="current-info">
 
